cleaning initialization code to make confiuration accessible to plugins and filters